# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  pyproject.toml  query-flow-diagram.md
backend/: ai_generator.py  app.py  config.py  fix_vector_store.py  search_tools.py  test_sequential_functionality.py
backend/tests/: __init__.py  conftest.py  run_diagnostics.py  simple_diagnostics.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_integration.py
backend/tests/chroma_db/: chroma.sqlite3
chroma_db/: chroma.sqlite3
frontend/: index.html  script.js  style.css
scripts/: format.sh  quality.sh
